Fix horizontal scrollbar on laptop screen

--- a/css/main.css
+++ b/css/main.css
@@ -318,7 +318,6 @@ a {
   }
 
   .contact-inner {
-    width: 100%;
     padding: 4em .75em;
   }
 }
